# oshs

./: .env-template.txt  .gitignore  db.sqlite3  docker-compose.production.yml  docker-compose.yml  package.json
backend/: Dockerfile  db.sqlite3  pyproject.toml  requirements.txt  settings.py  urls.py
backend/core/: asgi.py  urls.py  wsgi.py
backend/core/settings/: base.py  dev.py  prod.py
backend/settings/: ci.py  dev.py  prod.py
frontend/: Dockerfile  package.json
frontend/src/Layouts/Footer/: index.js
frontend/src/Layouts/Header/: index.js
frontend/src/Pages/About/: header.js  index.js  style.css
frontend/src/Pages/Educators/: header.js  index.js  style.css
frontend/src/Pages/Event/: header.js  index.js
frontend/src/Pages/Gallery/: header.js  index.js
frontend/src/Pages/Landing/: header.css  header.js  index.js  sections.js
frontend/src/Pages/SchoolAdmin/: index.js
src/: index.css  index.js
src/Components/Buttons/LoadMore/: index.js  style.css
src/Components/Cards/Educatorcard/: index.js  style.css
src/Components/Cards/EventCard/: index.js
src/Components/Cards/GalleryCard/: index.js
src/Components/Cards/NewsCard/: style.css
src/Layouts/Footer/: index.js  style.css
src/Layouts/Header/: index.js  style.css
src/Layouts/Modal/: index.js
src/Pages/About/: header.js  section.js
src/Pages/Educators/: header.js
src/Pages/Event/: header.js  style.css
src/Pages/Gallery/: header.js  index.js
src/Pages/Landing/: header.css  header.js  sections.js
src/Pages/SchoolAdmin/: header.js
src/Routes/: index.js
(+4 files in other folders)
