[tool.poetry]
name = "oshs-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "oshs_backend"}]

[tool.poetry.dependencies]
python = "3.10"
Django = "^4.1.2"
psycopg2-binary = "^2.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
